# Sementic

./: pyproject.toml
src/: cross_words.py
